--- a/AspNetCoreIdentityApp.Web/Views/Home/SignIn.cshtml
+++ b/AspNetCoreIdentityApp.Web/Views/Home/SignIn.cshtml
@@ -6,6 +6,8 @@
 <div class="row">
     <div class="col-md-4 offset-md-4">
         <h2>Kullanıcı Giriş Formu</h2>
+        <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert">
+        </div>
         <form asp-controller="Home" asp-action="SignIn">
             <div class="row mb-3">
                 <label for="Email" class="col-md-4 col-form-label" asp-for="Email"></label>
